--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,10 +5,9 @@
     Let the magic happens!
   </p>
   <p>
-    <input type="text" ng-model="magicValue"></input>
+    <input type="text"></input>
     <p>
-      {{ magicValue }}
     </p>
-    <button class="btn btn-success" ng-click="addLol()">Add LOL!</button>
+    <button class="btn btn-success"">Add LOL!</button>
   </p>
 </div>
